# cybsec

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
design/: design.md
engine/: aho_corasick.cpp  aho_corasick.hpp  bindings.cpp
gateway/: __init__.py  app.py  config.py  models.py  pipeline.py  redaction.py
gateway/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py
gateway/stages/: __init__.py  audit.py  auth.py  egress.py  pii_ner.py  pii_regex.py  proxy.py  ratelimit.py  threatscan.py
scripts/: chat.py  mint_token.py
signatures/: injection_signatures.json  internal_signatures.json
tests/: test_auth.py  test_engine.py  test_pii.py  test_pipeline.py  test_ratelimit.py
