[build-system]
requires = ["setuptools>=68", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-security-gateway"
version = "0.1.0"
description = "security/privacy proxy between clients and third-party llm providers"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "redis>=5.0",
    "httpx>=0.27",
    "spacy>=3.7",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

# only the gateway pkg is pure-python, ac_engine gets built from setup.py
[tool.setuptools]
packages = ["gateway", "gateway.stages", "gateway.providers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
